--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,16 +7,31 @@ a {
   text-decoration: none;
 }
 
-.hero img {
-  min-height: 100%;
-  max-height: 100%;
+/* nav bar */
+.nav-avatar-img {
+  height: 40px;
+  width: 40px;
+  object-fit: cover;
+}
+
+/* hero */
+.hero .carousel-inner {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .find-job .card-img-top {
   height: 200px;
   object-fit: cover;
+  object-position: top;
   padding: 1rem;
 }
+
+/* partner section */
+.partner-logo {
+  width: 30px;
+}
+
 
 .b-example-divider {
   height: 3rem;
