--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="../index.html">Job finder</a>
+          <a class="navbar-brand" href="../index.html">JoJo</a>
 
           <button
             class="navbar-toggler"
@@ -42,7 +42,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="templates/job.html">Jobs</a>
+                <a class="nav-link" href="job.html">Jobs</a>
               </li>
 
               <li class="nav-item">
@@ -50,13 +50,13 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Companies</a>
+                <a class="nav-link " href="companies.html">Companies</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">About us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
+                <a class="nav-link" href="contact-us.html">Contact us</a>
               </li>
             </ul>
 
@@ -69,6 +69,39 @@
                 <a class="nav-link" href="signup.html">Signup</a>
               </li>
             </ul>
+
+            <div class="px-3 d-none d-lg-block">
+              <div class="dropdown">
+                <a
+                  class="btn dropdown-toggle p-0"
+                  href="#"
+                  role="button"
+                  id="dropdownMenuLink"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <img
+                    class="nav-avatar-img rounded-circle"
+                    src="../assets/images/avatar.jpg"
+                    alt=""
+                  />
+                </a>
+
+                <ul
+                  class="dropdown-menu p-4 rounded-4"
+                  aria-labelledby="dropdownMenuLink"
+                >
+                  <li>
+                    <a class="dropdown-item" href="dashboard/user-info.html"
+                      >Dashboard</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="profile.html">Profile</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </nav>
@@ -161,7 +194,7 @@
             <div class="row">
               <div class="col-lg-4 col-md-4 col-sm-6 col-12 mt-4">
                 <!-- Single Salary -->
-                <article class="card p-lg-5 p-md-5">
+                <article class="card">
                   <div
                     class="card-title p-3 d-flex flex-column gap-5 justify-content-center align-items-center m-0"
                   >
