--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job finder</title>
+
     <!------------------- head style ------------------->
     <link rel="stylesheet" href="../assets/css/solid.min.css" />
     <link rel="stylesheet" href="../assets/css/fontawesome.min.css" />
@@ -13,7 +14,7 @@
     <!------------------- head style ------------------->
   </head>
 
-  <body>
+  <body class="bg-light">
     <!------------------- start header section ------------------->
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -55,13 +56,13 @@
                 <a class="nav-link" href="about.html">About us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
+                <a class="nav-link active" href="#">Contact us</a>
               </li>
             </ul>
 
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="login.html">Login</a>
+                <a class="nav-link" href="login.html">Login</a>
               </li>
 
               <li class="nav-item">
@@ -107,73 +108,89 @@
     </header>
     <!------------------- end header section ------------------->
 
+    <!-- Contact us section -->
     <main>
-      <div class="mx-auto mt-5" style="max-width: 500px">
-        <div
-          class="card shadow p-5"
-          style="
-            background-color: rgba(255, 255, 255, 0.9);
-            backdrop-filter: blur(6px);
-          "
-        >
-          <form class="row g-3 needs-validation" novalidate>
-            <div class="col-12">
-              <h1 class="text-primary fw-bold">Login</h1>
-            </div>
+      <div class="container-lg">
+        <div class="mt-4">
+          <div style="max-width: 500px" class="mx-auto card shadow p-5 pb-3">
+            <form class="row g-3" novalidate>
+              <h1 class="col-12 text-primary h2 fw-bold">Contact us</h1>
 
-            <div class="col-12 input-group">
-              <input
-                type="email"
-                class="form-control rounded-pill pl"
-                placeholder="Email"
-                aria-label="email"
-                aria-describedby="addon-wrapping"
-              />
-            </div>
-
-            <div class="col-12 input-group">
-              <input
-                type="password"
-                class="form-control rounded-pill pl"
-                placeholder="Password"
-                aria-label="password"
-                aria-describedby="addon-wrapping"
-              />
-            </div>
-            <div
-              class="d-flex justify-content-between align-items-center mb-3 mb-3"
-            >
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="keep-signed"
-                />
-                <label class="form-check-label fs-sm" for="keep-signed"
-                  >Keep me Login</label
-                >
+              <div class="col-12">
+                <div class="input-group flex-nowrap">
+                  <input
+                    type="text"
+                    class="form-control rounded-pill"
+                    placeholder="First Name"
+                    aria-label="fName"
+                    aria-describedby="addon-wrapping"
+                  />
+                </div>
               </div>
 
-              <a class="link-primary fs-ms" href="password-recovery.html"
-                >Forgot password?</a
-              >
-            </div>
-            <button class="btn btn-primary d-block w-100" type="submit">
-              Login
-            </button>
+              <div class="col-4">
+                <div class="input-group flex-nowrap">
+                  <select
+                    class="form-select rounded-pill"
+                    aria-label="Default select example"
+                  >
+                    <option selected>+967</option>
+                    <option value="1">+1</option>
+                    <option value="2">+966</option>
+                    <option value="3">+102</option>
+                  </select>
+                </div>
+              </div>
 
-            <p class="fs-sm pt-3 mb-0">
-              Don't have an account?
-              <a href="signup.html" class="fw-medium link-primary"> Sign up </a>
-            </p>
-          </form>
+              <div class="col-8">
+                <div class="input-group flex-nowrap">
+                  <input
+                    type="text"
+                    class="form-control rounded-pill"
+                    placeholder="Phone Number"
+                    aria-label="phone"
+                    aria-describedby="addon-wrapping"
+                  />
+                </div>
+              </div>
+
+              <!-- email -->
+              <div class="col-12">
+                <div class="input-group flex-nowrap">
+                  <input
+                    type="email"
+                    class="form-control rounded-pill"
+                    placeholder="Email"
+                    aria-label="email"
+                    aria-describedby="addon-wrapping"
+                  />
+                </div>
+              </div>
+
+              <!-- message -->
+              <div class="col-12">
+                <div class="input-group flex-nowrap">
+                  <textarea
+                    class="form-control rounded"
+                    cols="15"
+                    rows="5"
+                    placeholder="message..."
+                  ></textarea>
+                </div>
+              </div>
+
+              <button class="btn btn-primary w-100" type="submit">Send</button>
+            </form>
+          </div>
         </div>
       </div>
     </main>
 
+    <!------------------- start footer section ------------------->
     <footer class="bg-light text-dark py-3 mt-5">
       <p class="text-center mb-0">All copyright save for N.S</p>
     </footer>
+    <!------------------- end footer section ------------------->
 
     <!------------------- body script ------------------->
     <script src="../assets/js/jquery.min.js"></script>
