--- a/templates/job.html
+++ b/templates/job.html
@@ -14,66 +14,105 @@
     <!------------------- head style ------------------->
   </head>
   <body class="bg-light">
-    <!------------------- start header section ------------------->
-    <header class="sticky-top">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">Job finder</a>
-
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html"
-                  >Home</a
-                >
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link active" href="templates/job.html">Jobs</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="sesrvices.html">Our services</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="#">Companies</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
-              </li>
-            </ul>
-
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="signup.html">Signup</a>
-              </li>
-            </ul>
+      <!------------------- start header section ------------------->
+      <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container">
+            <a class="navbar-brand" href="../index.html">JoJo</a>
+  
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+  
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link " aria-current="page" href="../index.html"
+                    >Home</a
+                  >
+                </li>
+  
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Jobs</a>
+                </li>
+  
+                <li class="nav-item">
+                  <a class="nav-link" href="sesrvices.html"
+                    >Our services</a
+                  >
+                </li>
+  
+                <li class="nav-item">
+                  <a class="nav-link" href="companies.html">Companies</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">About us</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact-us.html">Contact us</a>
+                </li>
+              </ul>
+  
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="login.html">Login</a>
+                </li>
+  
+                <li class="nav-item">
+                  <a class="nav-link" href="signup.html">Signup</a>
+                </li>
+              </ul>
+  
+              <div class="px-3 d-none d-lg-block">
+                <div class="dropdown">
+                  <a
+                    class="btn dropdown-toggle p-0"
+                    href="#"
+                    role="button"
+                    id="dropdownMenuLink"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    <img
+                      class="nav-avatar-img rounded-circle"
+                      src="../assets/images/avatar.jpg"
+                      alt=""
+                    />
+                  </a>
+  
+                  <ul
+                    class="dropdown-menu p-4 rounded-4"
+                    aria-labelledby="dropdownMenuLink"
+                  >
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="dashboard/user-info.html"
+                        >Dashboard</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="profile.html"
+                        >Profile</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-      </nav>
-    </header>
-    <!------------------- end header section ------------------->
-
+        </nav>
+      </header>
+      <!------------------- end header section ------------------->
+  
     <main class="job-page">
       <div class="container-lg">
         <div class="row pt-4">
