--- a/templates/sesrvices.html
+++ b/templates/sesrvices.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job finder</title>
-   <!------------------- head style ------------------->
-   <link rel="stylesheet" href="../assets/css/solid.min.css" />
-   <link rel="stylesheet" href="../assets/css/fontawesome.min.css" />
-   <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
-   <link rel="stylesheet" href="../assets/css/style.css" />
-   <!------------------- head style ------------------->
+    <!------------------- head style ------------------->
+    <link rel="stylesheet" href="../assets/css/solid.min.css" />
+    <link rel="stylesheet" href="../assets/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <!------------------- head style ------------------->
   </head>
 
   <body>
+    <!------------------- start header section ------------------->
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html">Job finder</a>
+          <a class="navbar-brand" href="../index.html">JoJo</a>
 
           <button
             class="navbar-toggler"
@@ -31,33 +32,30 @@
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div
-            class="collapse navbar-collapse"
-            id="navbarSupportedContent"
-          >
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Home</a
                 >
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Careers</a>
+                <a class="nav-link" href="job.html">Jobs</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="sesrvices.html">Our services</a>
+                <a class="nav-link active" href="#">Our services</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Companies</a>
+                <a class="nav-link" href="companies.html">Companies</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
+                <a class="nav-link" href="about.html">About us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
+                <a class="nav-link" href="contact-us.html">Contact us</a>
               </li>
             </ul>
 
@@ -70,247 +68,139 @@
                 <a class="nav-link" href="signup.html">Signup</a>
               </li>
             </ul>
+
+            <div class="px-3 d-none d-lg-block">
+              <div class="dropdown">
+                <a
+                  class="btn dropdown-toggle p-0"
+                  href="#"
+                  role="button"
+                  id="dropdownMenuLink"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <img
+                    class="nav-avatar-img rounded-circle"
+                    src="../assets/images/avatar.jpg"
+                    alt=""
+                  />
+                </a>
+
+                <ul
+                  class="dropdown-menu p-4 rounded-4"
+                  aria-labelledby="dropdownMenuLink"
+                >
+                  <li>
+                    <a class="dropdown-item" href="dashboard/user-info.html"
+                      >Dashboard</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="profile.html">Profile</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </nav>
     </header>
+    <!------------------- end header section ------------------->
+
+    <!-- our services -->
+    <div class="container px-4 py-5" id="custom-cards">
+      <h2 class="pb-2 border-bottom">Our services</h2>
+
+      <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+        <div class="col">
+          <div
+            class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+            style="background-image: url('../assets/images/services/1.jpg')"
+          >
+            <div
+              class="d-flex flex-row align-items-end h-100 p-5 py-5 text-white text-shadow-1"
+            >
+              <h2 class="fw-bold mt-5">Ux/Ui</h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div
+            class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+            style="background-image: url('../assets/images/services/2.jpg')"
+          >
+            <div
+              class="d-flex flex-row align-items-end h-100 p-5 py-5 text-shadow-1"
+            >
+              <h2 class="fw-bold mt-5">Mobile development</h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div
+            class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+            style="background-image: url('../assets/images/services/3.jpg')"
+          >
+            <div
+              class="d-flex flex-row align-items-end h-100 p-5 py-5 text-white text-shadow-1"
+            >
+              <h2 class="fw-bold mt-5">Web design</h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div
+            class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+            style="background-image: url('../assets/images/services/4.jpg')"
+          >
+            <div
+              class="d-flex flex-row align-items-end h-100 p-5 py-5 text-white text-shadow-1"
+            >
+              <h2 class="fw-bold mt-5">Web design</h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div
+            class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+            style="background-image: url('../assets/images/services/5.jpg')"
+          >
+            <div
+              class="d-flex flex-row align-items-end h-100 p-5 py-5 text-white text-shadow-1"
+            >
+              <h2 class="fw-bold mt-5">Ux/Ui</h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div
+            class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+            style="background-image: url('../assets/images/services/6.jpg')"
+          >
+            <div
+              class="d-flex flex-row align-items-end h-100 p-5 py-5 text-shadow-1"
+            >
+              <h2 class="fw-bold mt-5">Mobile development</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="bg-light text-dark py-3">
+      <p class="text-center mb-0">All copyright save for N.S</p>
+    </footer>
+
+    <!------------------- body script ------------------->
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/popper.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/script.js"></script>
+    <!------------------- body script ------------------->
   </body>
-</html>
-
-
-<!-- our services -->
-<div class="container px-4 py-5" id="custom-cards">
-  <h2 class="pb-2 border-bottom">Our services</h2>
-
-  <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-    <div class="col">
-      <div
-        class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-        style="background-image: url('img/features/1.jpg')"
-      >
-        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-          <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Ux/Ui</h2>
-          <ul class="d-flex list-unstyled mt-auto">
-            <li class="me-auto">
-              <img
-                src="https://github.com/twbs.png"
-                alt="Bootstrap"
-                width="32"
-                height="32"
-                class="rounded-circle border border-white"
-              />
-            </li>
-            <li class="d-flex align-items-center me-3">
-              <svg class="bi me-2" width="1em" height="1em">
-                <use xlink:href="#geo-fill" />
-              </svg>
-              <small>H2O</small>
-            </li>
-            <li class="d-flex align-items-center">
-              <svg class="bi me-2" width="1em" height="1em">
-                <use xlink:href="#calendar3" />
-              </svg>
-              <small>4d</small>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="col">
-      <div
-        class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-        style="background-image: url('img/features/3.jpg')"
-      >
-        <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-          <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
-            Mobile development
-          </h2>
-          <ul class="d-flex list-unstyled mt-auto">
-            <li class="me-auto">
-              <img
-                src="https://github.com/twbs.png"
-                alt="Bootstrap"
-                width="32"
-                height="32"
-                class="rounded-circle border border-white"
-              />
-            </li>
-            <li class="d-flex align-items-center me-3">
-              <svg class="bi me-2" width="1em" height="1em">
-                <use xlink:href="#geo-fill" />
-              </svg>
-              <small>ABC</small>
-            </li>
-            <li class="d-flex align-items-center">
-              <svg class="bi me-2" width="1em" height="1em">
-                <use xlink:href="#calendar3" />
-              </svg>
-              <small>5d</small>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="col">
-      <div
-        class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-        style="background-image: url('img/features/2.jpg')"
-      >
-        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-          <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Web design</h2>
-          <ul class="d-flex list-unstyled mt-auto">
-            <li class="me-auto">
-              <img
-                src="https://github.com/twbs.png"
-                alt="Bootstrap"
-                width="32"
-                height="32"
-                class="rounded-circle border border-white"
-              />
-            </li>
-            <li class="d-flex align-items-center me-3">
-              <svg class="bi me-2" width="1em" height="1em">
-                <use xlink:href="#geo-fill" />
-              </svg>
-              <small>123 company</small>
-            </li>
-            <li class="d-flex align-items-center">
-              <svg class="bi me-2" width="1em" height="1em">
-                <use xlink:href="#calendar3" />
-              </svg>
-              <small>3d</small>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="col">
-      <div
-        class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-        style="background-image: url('img/features/2.jpg')"
-      >
-        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-          <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Web design</h2>
-          <ul class="d-flex list-unstyled mt-auto">
-            <li class="me-auto">
-              <img
-                src="https://github.com/twbs.png"
-                alt="Bootstrap"
-                width="32"
-                height="32"
-                class="rounded-circle border border-white"
-              />
-            </li>
-            <li class="d-flex align-items-center me-3">
-              <svg class="bi me-2" width="1em" height="1em">
-                <use xlink:href="#geo-fill" />
-              </svg>
-              <small>123 company</small>
-            </li>
-            <li class="d-flex align-items-center">
-              <svg class="bi me-2" width="1em" height="1em">
-                <use xlink:href="#calendar3" />
-              </svg>
-              <small>3d</small>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="col">
-      <div
-        class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-        style="background-image: url('img/features/1.jpg')"
-      >
-        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-          <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Ux/Ui</h2>
-          <ul class="d-flex list-unstyled mt-auto">
-            <li class="me-auto">
-              <img
-                src="https://github.com/twbs.png"
-                alt="Bootstrap"
-                width="32"
-                height="32"
-                class="rounded-circle border border-white"
-              />
-            </li>
-            <li class="d-flex align-items-center me-3">
-              <svg class="bi me-2" width="1em" height="1em">
-                <use xlink:href="#geo-fill" />
-              </svg>
-              <small>H2O</small>
-            </li>
-            <li class="d-flex align-items-center">
-              <svg class="bi me-2" width="1em" height="1em">
-                <use xlink:href="#calendar3" />
-              </svg>
-              <small>4d</small>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="col">
-      <div
-        class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-        style="background-image: url('img/features/3.jpg')"
-      >
-        <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-          <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
-            Mobile development
-          </h2>
-          <ul class="d-flex list-unstyled mt-auto">
-            <li class="me-auto">
-              <img
-                src="https://github.com/twbs.png"
-                alt="Bootstrap"
-                width="32"
-                height="32"
-                class="rounded-circle border border-white"
-              />
-            </li>
-            <li class="d-flex align-items-center me-3">
-              <svg class="bi me-2" width="1em" height="1em">
-                <use xlink:href="#geo-fill" />
-              </svg>
-              <small>ABC</small>
-            </li>
-            <li class="d-flex align-items-center">
-              <svg class="bi me-2" width="1em" height="1em">
-                <use xlink:href="#calendar3" />
-              </svg>
-              <small>5d</small>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<footer class="bg-light text-dark py-3">
-  <p class="text-center mb-0">All copyright save for N.S</p>
-</footer>
-
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.js"></script>
-<script src="js/bootstrap.min.js"></script>
-
-<!-- nav bar script -->
-<script>
-
-  $('.nav-item').on('click', (e) => {
-    console.log('click');
-
-    e.target.classList.add('active')
-  })
-</script>
-
-</body>
-
 </html>
