--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job finder</title>
-   <!------------------- head style ------------------->
-   <link rel="stylesheet" href="../assets/css/solid.min.css" />
-   <link rel="stylesheet" href="../assets/css/fontawesome.min.css" />
-   <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
-   <link rel="stylesheet" href="../assets/css/style.css" />
-   <!------------------- head style ------------------->
+    <!------------------- head style ------------------->
+    <link rel="stylesheet" href="../assets/css/solid.min.css" />
+    <link rel="stylesheet" href="../assets/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <!------------------- head style ------------------->
   </head>
 
   <body>
+    <!------------------- start header section ------------------->
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html">Job finder</a>
+          <a class="navbar-brand" href="../index.html">JoJo</a>
 
           <button
             class="navbar-toggler"
@@ -31,19 +32,16 @@
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div
-            class="collapse navbar-collapse"
-            id="navbarSupportedContent"
-          >
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Home</a
                 >
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Careers</a>
+                <a class="nav-link" href="job.html">Jobs</a>
               </li>
 
               <li class="nav-item">
@@ -51,10 +49,10 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Companies</a>
+                <a class="nav-link" href="companies.html">Companies</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
+                <a class="nav-link" href="about.html">About us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact us</a>
@@ -67,86 +65,164 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="signup.html">Signup</a>
+                <a class="nav-link active" href="signup.html">Signup</a>
               </li>
             </ul>
+
+            <div class="px-3 d-none d-lg-block">
+              <div class="dropdown">
+                <a
+                  class="btn dropdown-toggle p-0"
+                  href="#"
+                  role="button"
+                  id="dropdownMenuLink"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <img
+                    class="nav-avatar-img rounded-circle"
+                    src="../assets/images/avatar.jpg"
+                    alt=""
+                  />
+                </a>
+
+                <ul
+                  class="dropdown-menu p-4 rounded-4"
+                  aria-labelledby="dropdownMenuLink"
+                >
+                  <li>
+                    <a class="dropdown-item" href="dashboard/user-info.html"
+                      >Dashboard</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="profile.html">Profile</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </nav>
     </header>
-  </body>
-</html>
+    <!------------------- end header section ------------------->
 
-
-<div class="container">
-  <h2 class="text-center mt-4 mb-0">Signup</h2>
-
-  <form action="" class="mt-3 py-3">
-    <div class="row">
-      <div class="col-md-6 mx-auto">
-        <div class="mb-3">
-          <label for="formGroupExampleInput" class="form-label"> Name </label>
-          <input type="text" class="form-control" id="formGroupExampleInput" />
-        </div>
-
-        <div class="mb-3">
-          <label for="formGroupExampleInputEmial" class="form-label">
-            Email
-          </label>
-          <input
-            type="text"
-            class="form-control"
-            id="formGroupExampleInputEmial"
-          />
-        </div>
-
-        <div class="mb-3">
-          <label for="formGroupExampleInputUsername" class="form-label">
-            Username
-          </label>
-          <input
-            type="text"
-            class="form-control"
-            id="formGroupExampleInputUsername"
-          />
-        </div>
-
-        <div class="mb-3">
-          <label for="formGroupExampleInput2" class="form-label"
-            >Password</label
+    <main>
+      <div class="mx-auto mt-5" style="max-width: 500px">
+        <div class="row">
+          <div
+            class="card shadow p-5 pb-3"
+            style="
+              background-color: rgba(255, 255, 255, 0.9);
+              backdrop-filter: blur(6px);
+            "
           >
-          <input
-            type="password"
-            class="form-control"
-            id="formGroupExampleInput2"
-          />
-        </div>
-        <div class="mb-3">
-          <button class="btn btn-primary w-100 mt-3">Signup</button>
+            <form class="row g-3" novalidate>
+              <h1 class="col-12 text-primary fw-bold">Sign up</h1>
+
+              <!-- first name -->
+              <div class="col-6">
+                <div class="input-group flex-nowrap">
+                  <input
+                    type="text"
+                    class="form-control rounded-pill"
+                    placeholder="First Name"
+                    aria-label="fName"
+                    aria-describedby="addon-wrapping"
+                  />
+                </div>
+              </div>
+
+              <!-- last name -->
+              <div class="col-6">
+                <div class="input-group flex-nowrap">
+                  <input
+                    type="text"
+                    class="form-control rounded-pill"
+                    placeholder="Last Name"
+                    aria-label="lName"
+                    aria-describedby="addon-wrapping"
+                  />
+                </div>
+              </div>
+
+              <!-- phone code -->
+              <div class="col-4">
+                <div class="input-group flex-nowrap">
+                  <select
+                    class="form-select rounded-pill"
+                    aria-label="Default select example"
+                  >
+                    <option selected>+966</option>
+                    <option value="1">+01</option>
+                    <option value="2">+911</option>
+                    <option value="3">+103</option>
+                  </select>
+                </div>
+              </div>
+
+              <!-- phone number -->
+              <div class="col-8">
+                <div class="input-group flex-nowrap">
+                  <input
+                    type="text"
+                    class="form-control rounded-pill"
+                    placeholder="Phone Number"
+                    aria-label="phone"
+                    aria-describedby="addon-wrapping"
+                  />
+                </div>
+              </div>
+
+              <!-- email -->
+              <div class="col-12">
+                <div class="input-group flex-nowrap">
+                  <input
+                    type="email"
+                    class="form-control rounded-pill"
+                    placeholder="Email"
+                    aria-label="email"
+                    aria-describedby="addon-wrapping"
+                  />
+                </div>
+              </div>
+
+              <!-- password -->
+              <div class="col-12">
+                <div class="input-group flex-nowrap">
+                  <input
+                    type="password"
+                    class="form-control rounded-pill"
+                    placeholder="Password"
+                    aria-label="password"
+                    aria-describedby="addon-wrapping"
+                  />
+                </div>
+              </div>
+
+              <button class="mt-4 btn btn-primary" type="button">
+                Sign in
+              </button>
+
+              <p class="fs-sm pt-3 mb-0">
+                Already have an account?
+                <a href="login.html" class="fw-medium">Sign in</a>
+              </p>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
-  </form>
-</div>
+    </main>
 
-<footer class="bg-light text-dark py-3">
-  <p class="text-center mb-0">All copyright save for N.S</p>
-</footer>
+    <footer class="bg-light text-dark py-3 mt-5">
+      <p class="text-center mb-0">All copyright save for N.S</p>
+    </footer>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.js"></script>
-<script src="js/bootstrap.min.js"></script>
-
-<!-- nav bar script -->
-<script>
-
-  $('.nav-item').on('click', (e) => {
-    console.log('click');
-
-    e.target.classList.add('active')
-  })
-</script>
-
-</body>
-
+    <!------------------- body script ------------------->
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/popper.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/script.js"></script>
+    <!------------------- body script ------------------->
+  </body>
 </html>
